--- a/styles.css
+++ b/styles.css
@@ -3,25 +3,60 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
   font-size: 18px;
+  background-image: url('gifs/CTwallpaper2.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color:#444;
 }
 body, a:link, a:visited, a:active{
-  color: lightblue;
+  color: hotpink;
 }
 .title, .addDancerButton{
-  padding:5px 12px;
+  padding:11px 12px;
   float:right;
 }
+
+.lineUpDancers{
+  padding:11px 12px;
+  float:left;
+}
+
 .topbar{
-  height:32px;
-  background-color: #555;
+  font-weight: bold;
+  font-family: 'Comic Sans MS';
+  height:55px;
+  background-color: #0c7aad;
 }
 .title{
-  background-color: #777;
+  font-weight: bold;
+  font-family: 'Comic Sans MS';
+  height:33px;
+  background-color: darkgray
 }
 .dancer{
-  border:10px solid red;
+  font-weight: bold;
+  border:10px solid hotpink;
   border-radius:10px;
   position:absolute;
+}
+.frog,
+.chrono{
+  height: 100px;
+  width: 100px;
+  position:absolute;
+}
+.marle{
+  height: 80px;
+  width: 80px;
+  position:absolute;
+}
+/* .chrono{
+  height: 100px;
+  width: 100px;
+  position:absolute;
+} */
+
+.flip{
+  transform: rotate(180deg);
 }
