Updated testspec and dance party functionality - lineUpDancers() uses animation, evenly spaces dancers - breakOut() animation to set location of dancers randomly - blinkyDancer.stick() works, dancer moves to another dancer 250px away from its own initial location - wrote additional tests in dancerSpec.js, passing

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,8 @@ body, a:link, a:visited, a:active{
   float:right;
 }
 
-.lineUpDancers{
+.lineUpDancers,
+.breakOutDancers{
   padding:11px 12px;
   float:left;
 }
@@ -47,15 +48,10 @@ body, a:link, a:visited, a:active{
   position:absolute;
 }
 .marle{
-  height: 80px;
-  width: 80px;
+  height: 75px;
+  width: 75px;
   position:absolute;
 }
-/* .chrono{
-  height: 100px;
-  width: 100px;
-  position:absolute;
-} */
 
 .flip{
   transform: rotate(180deg);
